--- a/docs/谷粒商城—分布式高级.md
+++ b/docs/谷粒商城—分布式高级.md
@@ -5029,7 +5029,7 @@ public class RedissonConfig {
     @Bean
     public RedissonClient redissonClient(){
         Config config = new Config();
-        config.useSingleServer().setAddress("redis://192.168.56.102:6379");
+        config.useSingleServer().setAddress("redis://192.168.64.130:6379");
         RedissonClient redisson = Redisson.create(config);
         return redisson;
     }
@@ -7384,7 +7384,7 @@ public R login(@RequestBody SocialUser socialUser) {
 ```yaml
 spring:
   redis:
-    host: 192.168.56.102
+    host: 192.168.64.130
   session:
     store-type: redis
 ```
@@ -8565,7 +8565,7 @@ registry {
   type = "nacos"
 
   nacos {
-    serverAddr = "#:8848"
+    serverAddr = "192.168.64.130:8848"
     namespace = "public"
     cluster = "default"
   }
